# argentum-taller

./: .gitignore  CMakeLists.txt  README.md  clean.sh  execute.sh  install.sh  make.sh  minimal.supp
client/: client.cpp  client.h  main.cpp
client/communication/: client.cpp  client.h  connection_handler.cpp  connection_handler.h  connection_receiver.cpp  connection_receiver.h  connection_sender.cpp  connection_sender.h  game_handler.cpp  game_handler.h  game_input_handler.cpp  game_input_handler.h  game_render.cpp  game_render.h  gameplay.cpp  gameplay.h  protocol.cpp  protocol.h
client/config/: screen_resolution.json
client/data_transfer_objects/: attack_command_dto.cpp  attack_command_dto.h  buy_item_command_dto.cpp  buy_item_command_dto.h  command_dto.cpp  command_dto.h  command_dto_factory.cpp  command_dto_factory.h  command_dto_manager.cpp  command_dto_manager.h  deposit_gold_command_dto.cpp  deposit_gold_command_dto.h  deposit_item_command_dto.cpp  deposit_item_command_dto.h  equip_command_dto.cpp  equip_command_dto.h  heal_command_dto.cpp  heal_command_dto.h  list_command_dto.cpp  list_command_dto.h  meditate_command_dto.cpp  meditate_command_dto.h  move_command_dto.cpp  revive_command_dto.cpp  revive_command_dto.h  sell_item_command_dto.cpp  sell_item_command_dto.h  stop_move_command_dto.cpp  stop_move_command_dto.h  take_command_dto.cpp  take_command_dto.h  throw_command_dto.cpp  throw_command_dto.h  unequip_command_dto.cpp  unequip_command_dto.h  withdraw_gold_command_dto.cpp  withdraw_gold_command_dto.h  withdraw_item_command_dto.cpp  withdraw_item_command_dto.h
client/game/: GameSurfacesManager.cpp  GameSurfacesManager.h  client_world.cpp  client_world.h  client_world_monitor.cpp  client_world_monitor.h  command_dto_manager.cpp  command_dto_manager.h  exception.cpp  exception.h  game_Surfaces_manager.h  game_handler.cpp  game_handler.h  game_images_manager.cpp  game_images_manager.h  game_input_handler.cpp  game_input_handler.h  (+12 more)
common/: blocking_queue.cpp  blocking_queue.h  defines.h  npc.h  position_converter.cpp  position_converter.h  protected_queue.cpp  protected_queue.h  protocol.cpp  protocol.h  socket.cpp  socket_error.cpp  socket_error.h  terrain.h  thread.cpp  thread.h  user_event.cpp  user_event.h  world_structs.h
config/: server_config.json  server_config.txt
server/: client_handler.cpp  client_handler.h  defines.h  input_handler.cpp  input_handler.h  main.cpp  player.cpp  player.h  server.cpp  server.h  thread_acceptor.cpp  thread_acceptor.h  thread_client.cpp  thread_client.h
tiled/: grounds.tsx  world.json  world.tmx
(+247 files in other folders)
